--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uxcore-button",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "uxcore-button ui component for react",
   "main": "lib/index.js",
   "scripts": {
@@ -33,7 +33,8 @@
     "node-libs-browser": "^0.5.2",
     "style-loader": "^0.12.3",
     "url-loader": "^0.5.6",
-    "webpack": "^1.10.1"
+    "webpack": "^1.10.1",
+    "webpack-dev-server": "^1.10.1"
   },
   "dependencies": {
     "dom-align": "1.x",
@@ -44,7 +45,7 @@
   "peerDependencies": {
     "react": ">=0.13.0"
   },
-  "author": "vincent.bian",
+  "author": "vincent.bian <macisi528@gmail.com>",
   "contributors": [],
   "license": "MIT"
 }
