fix issue #1 & change to new scaffold

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "uxcore-button",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "uxcore-button ui component for react",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "scripts": {
-    "dev": "webpack-dev-server --progress --colors --port 9090",
+    "dev": "gulp server",
     "build": "webpack --config webpack.build.js",
     "deploy": "git subtree push --prefix build origin gh-pages"
   },
@@ -24,23 +24,21 @@
   "devDependencies": {
     "babel-core": "^5.6.18",
     "babel-loader": "^5.3.1",
-    "css-loader": "^0.13.1",
-    "examplecode": "^1.0.0",
-    "file-loader": "^0.8.4",
-    "html-webpack-plugin": "^1.6.0",
-    "less": "^2.5.1",
-    "less-loader": "^2.2.0",
-    "node-libs-browser": "^0.5.2",
-    "style-loader": "^0.12.3",
-    "url-loader": "^0.5.6",
-    "webpack": "^1.10.1",
-    "webpack-dev-server": "^1.10.1"
+    "browser-sync": "~2.8.2",
+    "console-polyfill": "~0.2.1",
+    "es5-shim": "~4.1.10",
+    "gulp": "~3.9.0",
+    "gulp-concat": "~2.6.0",
+    "gulp-just-replace": "~1.0.2",
+    "gulp-less": "~3.0.3",
+    "gulp-sourcemaps": "~1.5.2",
+    "webpack": "^1.10.5"
   },
   "dependencies": {
-    "dom-align": "1.x",
-    "es6-promise": "^2.1.1",
+    "classnames": "^2.1.2",
     "object-assign": "^2.0.0",
-    "react": "^0.13.0"
+    "react": "^0.13.3",
+    "uxcore-kuma": "~1.0.6"
   },
   "peerDependencies": {
     "react": ">=0.13.0"
