upgrade to react@0.14

--- a/package.json
+++ b/package.json
@@ -32,13 +32,14 @@
     "gulp-just-replace": "~1.0.2",
     "gulp-less": "~3.0.3",
     "gulp-sourcemaps": "~1.5.2",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
+    "uxcore-kuma": "^1.1.0",
     "webpack": "^1.10.5"
   },
   "dependencies": {
     "classnames": "^2.1.2",
-    "object-assign": "^2.0.0",
-    "react": "^0.13.3",
-    "uxcore-kuma": "~1.0.6"
+    "object-assign": "^2.0.0"
   },
   "peerDependencies": {
     "react": ">=0.13.0"
