--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
  "name": "uxcore-button",
- "version": "0.3.9",
+ "version": "0.3.10",
  "description": "uxcore-button ui component for react",
  "main": "build/index.js",
  "scripts": {
@@ -27,6 +27,7 @@
   "babel-preset-react": "~6.3.13",
   "babel-preset-stage-1": "~6.3.13",
   "browser-sync": "~2.11.0",
+  "colors": "^1.1.2",
   "console-polyfill": "~0.2.1",
   "cross-spawn": "^2.1.5",
   "es5-shim": "~4.1.10",
