--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
  "name": "uxcore-button",
- "version": "0.3.11",
+ "version": "0.3.12",
  "description": "uxcore-button ui component for react",
  "main": "build/index.js",
  "scripts": {
@@ -24,16 +24,19 @@
   "babel-loader": "~6.2.1",
   "babel-plugin-add-module-exports": "~0.1.2",
   "babel-preset-es2015": "~6.3.13",
+  "babel-preset-es2015-loose": "~7.0.0",
   "babel-preset-react": "~6.3.13",
   "babel-preset-stage-1": "~6.3.13",
   "browser-sync": "~2.11.0",
   "colors": "^1.1.2",
   "console-polyfill": "~0.2.1",
   "cross-spawn": "^2.1.5",
+  "es3ify-loader": "~0.1.0",
   "es5-shim": "~4.1.10",
   "gulp": "~3.9.0",
   "gulp-babel": "~6.1.1",
   "gulp-concat": "~2.6.0",
+  "gulp-es3ify": "0.0.0",
   "gulp-just-replace": "~1.0.2",
   "gulp-less": "~3.0.3",
   "gulp-sourcemaps": "~1.5.2",
