--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
  "name": "uxcore-button",
- "version": "0.4.10",
+ "version": "0.4.11",
  "description": "uxcore-button ui component for react",
  "main": "build/index.js",
  "scripts": {
@@ -36,7 +36,8 @@
   "react": "0.14.x",
   "react-addons-test-utils": "0.14.x",
   "react-dom": "0.14.x",
-  "uxcore-kuma": "2.x",
+  "uxcore-icon": "^0.1.11",
+  "uxcore-kuma": "*",
   "uxcore-tools": "0.2.x"
  },
  "dependencies": {
