--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
  "name": "uxcore-button",
- "version": "0.4.15",
+ "version": "0.4.16",
  "description": "uxcore-button ui component for react",
  "main": "build/index.js",
  "scripts": {
@@ -40,7 +40,7 @@
   "react-addons-test-utils": "15.x",
   "react-dom": "15.x",
   "react-test-renderer": "15.x",
-  "uxcore-icon": "^0.1.11",
+  "uxcore-icon": "*",
   "uxcore-kuma": "*",
   "uxcore-tools": "0.2.x"
  },
