--- a/package.json
+++ b/package.json
@@ -1,55 +1,54 @@
 {
- "name": "uxcore-button",
- "version": "0.4.17",
- "description": "uxcore-button ui component for react",
- "main": "build/index.js",
- "scripts": {
-  "start": "uxcore-tools run start",
-  "server": "uxcore-tools run server",
-  "lint": "uxcore-tools run lint",
-  "build": "uxcore-tools run build",
-  "test": "uxcore-tools run test",
-  "coverage": "uxcore-tools run coverage",
-  "pub": "uxcore-tools run pub",
-  "dep": "uxcore-tools run dep",
-  "tnpm-dep": "uxcore-tools run tnpm-dep",
-  "chrome": "uxcore-tools run chrome",
-  "browsers": "uxcore-tools run browsers",
-  "saucelabs": "uxcore-tools run saucelabs",
-  "update": "uxcore-tools run update",
-  "tnpm-update": "uxcore-tools run tnpm-update"
- },
- "repository": "https://github.com/uxcore/uxcore-button.git",
- "bugs": {
-  "url": "http://github.com/uxcore/button/issues"
- },
- "keywords": [
-  "react",
-  "react-component",
-  "react-uxcore-button",
-  "uxcore-button"
- ],
- "devDependencies": {
-  "console-polyfill": "^0.2.2",
-  "enzyme": "^3.0.0",
-  "enzyme-adapter-react-15": "^1.0.0",
-  "es5-shim": "^4.5.8",
-  "expect.js": "~0.3.1",
-  "kuma-base": "1.x",
-  "react": "15.x",
-  "react-addons-test-utils": "15.x",
-  "react-dom": "15.x",
-  "react-test-renderer": "15.x",
-  "uxcore-icon": "*",
-  "uxcore-kuma": "*",
-  "uxcore-tools": "0.2.x"
- },
- "dependencies": {
-  "classnames": "^2.1.2",
-  "object-assign": "^4.0.0",
-  "prop-types": "15.x"
- },
- "author": "vincent.bian <macisi528@gmail.com>",
- "contributors": [],
- "license": "MIT"
+  "name": "uxcore-button",
+  "version": "0.4.18",
+  "description": "uxcore-button ui component for react",
+  "main": "build/index.js",
+  "scripts": {
+    "start": "uxcore-tools run start",
+    "server": "uxcore-tools run server",
+    "lint": "uxcore-tools run lint",
+    "build": "uxcore-tools run build",
+    "test": "uxcore-tools run test",
+    "coverage": "uxcore-tools run coverage",
+    "pub": "uxcore-tools run pub",
+    "dep": "uxcore-tools run dep",
+    "tnpm-dep": "uxcore-tools run tnpm-dep",
+    "chrome": "uxcore-tools run chrome",
+    "browsers": "uxcore-tools run browsers",
+    "saucelabs": "uxcore-tools run saucelabs",
+    "update": "uxcore-tools run update",
+    "tnpm-update": "uxcore-tools run tnpm-update"
+  },
+  "repository": "https://github.com/uxcore/uxcore-button.git",
+  "bugs": {
+    "url": "http://github.com/uxcore/button/issues"
+  },
+  "keywords": [
+    "react",
+    "react-component",
+    "react-uxcore-button",
+    "uxcore-button"
+  ],
+  "devDependencies": {
+    "babel-polyfill": "6.x",
+    "console-polyfill": "^0.2.2",
+    "enzyme": "^3.0.0",
+    "enzyme-adapter-react-16": "1.x",
+    "expect.js": "~0.3.1",
+    "kuma-base": "1.x",
+    "react": "16.x",
+    "react-dom": "16.x",
+    "react-test-renderer": "16.x",
+    "uxcore-icon": "*",
+    "uxcore-kuma": "*",
+    "uxcore-tools": "^0.3.3"
+  },
+  "dependencies": {
+    "classnames": "^2.1.2",
+    "object-assign": "^4.0.0",
+    "prop-types": "15.x"
+  },
+  "author": "vincent.bian <macisi528@gmail.com>",
+  "contributors": [],
+  "license": "MIT"
 }
